chapter_02/Exercise_2.06_configMaps/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash-app-dep
  namespace: hash-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash-app
  template:
    metadata:
      labels:
        app: hash-app
    spec:
      containers:
        - name: request-counter
          image: ilikka/pingpong_app:004
          imagePullPolicy: Always
        - name: log-output-app
          image: ilikka/logoutput_app:005
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config 
              subPath: serverconfig.txt
      volumes:
        - name: config-volume
          configMap:
            name: hash-app-configmap  # Reference the ConfigMap you want to mount
