chapter_02/Exercise_2.06_configMaps/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash--app-ingress
  namespace: hash-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hash-app-svc
            port:
              number: 2345
